[tool.poetry]
name = "python-project-poetry-template"
version = "0.1.0"
description = "Python Project Poetry Template"
authors = ["mrjk"]
license = "GPLv3"

packages = [
    { include = "myprj"}
]

[tool.poetry_bumpversion.file."myprj/__version__.py"]


[tool.poetry.scripts]
myprj = "myprj.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
poetry-bumpversion = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
